added basic html, working on adding css

--- a/eval/index.html
+++ b/eval/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <head>Word Guessing Game</head>
+    <div>0 / 10</div>
+    <div>HEL_O</div>
+    <input type="text">
+    <button type="button">New Game</button>
 </body>
 </html>
