progress commit: finished view and model, working on controller

--- a/eval/index.html
+++ b/eval/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="wrappercard">
         <header class="wrappercard__header">Word Guessing Game</header>
-        <div class="wrappercard__chance">0 / 10</div>
-        <div class="wrappercard__word"><span class="wrappercard__word__letter">H</span>
+        <div class="wrappercard__chance" id="chance">0 / 10</div>
+        <div class="wrappercard__word" id="guess-word"><span class="wrappercard__word__letter">H</span>
             <span class="wrappercard__word__letter">_</span>
             <span class="wrappercard__word__letter">R</span>
         </div>
         <input class="wrappercard__guessinput" type="text">
-        <button class="wrappercard__newgamebtn" type="button">New Game</button>
+        <button class="wrappercard__newgamebtn" type="button" id="new-game-btn">New Game</button>
     </div>
 </body>
 </html>
