removed comments in html file

--- a/eval/index.html
+++ b/eval/index.html
@@ -11,11 +11,8 @@
 <body>
     <div class="wrappercard">
         <header class="wrappercard__header">Word Guessing Game</header>
-        <div class="wrappercard__chance" id="chance">0 / 10</div>
+        <div class="wrappercard__chance" id="chance"></div>
         <div class="wrappercard__word" id="guess-word">
-            <!-- <span class="wrappercard__word__letter">H</span>
-            <span class="wrappercard__word__letter">_</span>
-            <span class="wrappercard__word__letter">R</span> -->
         </div>
         <input class="wrappercard__guessinput" type="text" id="user-input" maxlength="1">
         <button class="wrappercard__new-game-btn" type="button" id="new-game-btn">New Game</button>
