implemented all bonus features

--- a/eval/index.html
+++ b/eval/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="wrappercard">
+        <div class="wrappercard__timer" id="timer">60 : 00</div>
         <header class="wrappercard__header">Word Guessing Game</header>
         <div class="wrappercard__chance" id="chance"></div>
         <div class="wrappercard__word" id="guess-word">
@@ -18,32 +19,6 @@
         <button class="wrappercard__new-game-btn" type="button" id="new-game-btn">New Game</button>
         <div class="wrappercard__history">History</div>
         <ul class="wrappercard__letter-table" id="history-list">
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">a</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">b</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">c</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">d</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">e</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">f</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">g</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">h</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">i</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">j</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">k</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">l</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">m</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">n</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">o</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">p</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">q</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">r</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">s</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">t</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">u</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">v</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">w</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">x</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">y</li>
-            <li class="wrappercard__letter-table__letter wrappercard__letter-table__letter--wrong">z</li>
         </ul>
     </div>
 </body>
