removed unwanted content in html file

--- a/eval/index.html
+++ b/eval/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrappercard">
-        <div class="wrappercard__timer" id="timer">60 : 00</div>
+        <div class="wrappercard__timer" id="timer"></div>
         <header class="wrappercard__header">Word Guessing Game</header>
         <div class="wrappercard__chance" id="chance"></div>
         <div class="wrappercard__word" id="guess-word">
